syntax="proto3";

service sub {
    rpc TestSub(TestSubReq) returns (TestSubRes){}
}


message TestSubReq{
    int64 number1 = 1;
    int64 number2 = 2;
}

message TestSubRes{
    int64 number = 1;
}